--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
         <table width="1000px" bgcolor= "creeam" >
             <tr>
                 <td>
-                    <img src="hamza.jpg" alt="" height="300px" width="350px">
+                    <img src="hamza.jpeg" alt="" height="300px" width="350px">
                 </td>
                 <td width="1px"></td>
                 <td> 
